xubuntu-wp/style.css
/*
 *  Theme Name: WordPress for Xubuntu.org
 *  Description: A theme built for the Xubuntu website. Features multiple widget areas in the frontpage.
 *  Author: Pasi Lallinaho
 *  Version: 2012
 *  Author URI: http://open.knome.fi/
 *  Theme URI: https://xubuntu.org/
 *
 */

html {
	background: #163d79 url(images/page-background.png) 50% 0 no-repeat;
}

body {
	padding: 2em 0 3em 0;

	font-size: small;
	font-family: "Ubuntu", sans-serif;
	line-height: 1.5em;

	background: transparent url(images/page-background-stripe.png) 0 0 repeat-x;
	color: #203b66;
	border-top: 4px solid #1c3966;

	min-height: 760px;
}

/*  Site width stuff
 *
 */

#wpcontent, #logo {
	width: 90%;
	margin: 0 auto;

	min-width: 960px;
	max-width: 1200px;
	clear: both;
}

/*  Self-clearing float
 *  (and other little tweaks)
 *
 */

.group:after {
	content: ".";
	display: block;
	height: 0;
	clear: both;
	visibility: hidden;
}

.hidden { display: none; }
.small { font-size: 85%; }
.alignleft { float: left; margin: 0 20px 20px 0; }
.alignright { float: right; margin: 0 0 20px 20px; }
.aligncenter { text-align: center; }

/*  Selection style
 *
 */

::selection {
	background-color: #2c5aa0;
	color: #fff;
}
::-moz-selection {
	background-color: #2c5aa0;
	color: #fff;
}

/*  Element styles
 *
 */

p, ol, ul, dl, blockquote, pre, table {
	margin-bottom: 1em;
	font-size: 90%;
}

a {
	text-decoration: none;
	color: #2c5aa0;
	border-bottom: 1px solid transparent;

	-webkit-transition: all 0.3s ease-in-out;
	-moz-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	transition: all 0.3s ease-in-out;
}
	a:hover,
	a:active,
	a:focus {
		color: rgba(0,25,65,.8);
		border-bottom: 1px solid rgba(0,0,0,.3);
	}
	#xubuntu.is-front #main li a {
		font-size: 120%;
		line-height: 1.3em;
		color: #6e9bd4; /* #96add0; */
	}
	li.news a { color: #203b66 !important; }
	a.attachment { border-bottom: none; }

blockquote {
	margin-left: 20px;
	padding-left: 20px;
	border-left-color: #3369bb;
	border-left: 3px solid rgba(0,68,170,.3);
}

code {
	font-size: 110%;
	background-color: #ddd;
	color: #3369bb;
	padding: 0.2em 0.4em;
}

h1, h2, h3, h4, h5, h6 {
	font-weight: normal;
	text-align: left;
	margin: 1.3em 0 0.6em 0;
}

h1 {
	margin-top: 1.1em;
	margin-bottom: 0.5em;

	font-size: 210%;
	font-weight: normal;
	line-height: 1.15em;

	color: #2c5aa0;
}
	h1.post-title {
		line-height: 1.5em;
		margin-bottom: 0;
	}
	.item-archive h1.post-title {
		font-size: 150%;
	}
	.type-post h1 {
		color: #222;
		font-size: 200%;
	}
	h1 a {
		padding-bottom: 2px;
		border-bottom-color: #d9d9d9;
		border-bottom: 1px solid rgba(0,0,0,.15);
	}

h2 { font-size: 170%; }
	#front_columns h2 { color: #999; margin-top: 0.5em; }

h3 { font-size: 140%; color: #444; }
h4 { font-size: 130%; color: #555; }
h5 { font-size: 120%; color: #888; }
h6 { font-size: 105%; color: #aaa; }

hr {
	margin: 1em 0;
	border-bottom: 1px solid #dadada;
}

li { list-style-position: inside; }
	#xubuntu.is-front li { list-style-type: none; margin-bottom: 0; margin-left: 0; }
	#xubuntu.is-front #latest-news li { font-size: 130%; margin-bottom: 0.6em;}
	#mainwrap li { margin-bottom: 0.5em; list-style-position: outside; margin-left: 1em; }
	#mainwrap ul li { list-style-type: disc; }
	#mainwrap ol li { list-style-type: decimal; }

/*  Layout styles
 *
 */

#wpcontent {
	font-size: 110%;
	background: #f3f3f3 url(images/wpcontent-background.png) 0 0 repeat-x;

	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}

#logo {
	padding: 0 1.3em 1.3em 1.3em;
}

#logo a {
	margin-left: 2em;
	border-bottom: none;
}

#mainwrap {
	width: 90%;
	padding: 2em 2em;
	float: left;
}
	#main { margin-right: 295px; }
	#xubuntu.is-front #main { margin-top: -2em; margin-right: 465px; }

#sidebar {
	float: right;
	width: 260px;
	margin-left: -260px;
	padding-bottom: 2em;
}
#xubuntu.is-front #sidebar { width: 430px; margin-left: -430px; }
#xubuntu.is-front #sidebar .photoslider { margin-top: 2.5em; }

#front_columns {
	clear: both;
	margin: 0 2em;
	padding-bottom: 1em;
	border-top: 1px solid #d1d1d1;
}

#front_columns .column {
	float: left;
	width: 30%;
	padding-right: 3%;
}

#postnavi {
	clear: both;
	margin: 1em 2em;
	padding-top: 1em;
	border-top: 1px solid #d1d1d1;
}

#wpfooter {
	clear: both;
	background-color: #e7e7e7;
	padding: 0.3em 0 1em 0;

	font-size: 80%;
	font-weight: bold;
	line-height: 1.3em;

	-webkit-border-bottom-left-radius: 5px;
	-webkit-border-bottom-right-radius: 5px;
	-moz-border-radius-bottomleft: 5px;
	-moz-border-radius-bottomright: 5px;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
}
	#wpfooter #footer-widgets {
		padding: 0 2.5em;
	}
	#wpfooter .footer-widget {
		float: left;
		width: 18%;
		padding-right: 2%;
	}

/*  Menu with images
 *
 */

.gm-get-xubuntu { background-image: url(images/get-xubuntu-32.png); }
.gm-get-support { background-image: url(images/get-support-32.png); }
.gm-get-involved { background-image: url(images/get-involved-32.png); }

.gm-menu { background-repeat: no-repeat; background-position: 0 50%; font-size: 140%; }
.gm-menu a { border-bottom: none; display: table-cell; margin: 0; padding-left: 38px; height: 38px; vertical-align: middle; }

#wpfooter .gm-get-xubuntu { background-image: url(images/get-xubuntu-16.png); }
#wpfooter .gm-get-support { background-image: url(images/get-support-16.png); }
#wpfooter .gm-get-involved { background-image: url(images/get-involved-16.png); }

#wpfooter .gm-menu { font-size: 100%; }
#wpfooter .gm-menu a { padding-left: 20px; height: 20px; }

/*  Specific styles
 *
 */

a.header-image,
a.header-image:hover,
a.header-image:active,
a.header-image:focus {
	border: none;
}

.post-title { margin: 0 0 0.3em 0; }
.post-post { color: #333; margin: 1.5em 0; }
	#xubuntu.item-archive .post-post { margin-bottom: 3em; }

.post table {
	width: 100%;
}
.post table td {
	border: 1px solid #ccc;
	background-color: #f6f6f6;
	padding: 3px;
}
.post table th {
	text-align: left;
}

#sidebar ul#menu-main-menu {
	font-weight: bold;
}

.archive-message {
	margin-bottom: 2em;
}

.news {
	margin-bottom: 0.8em;
}

.news-meta {
	display: block;
	font-size: 60%;
	color: #999;
	line-height: 1.1em;
}

/*  Post and comment metadata
 *
 */

.post-meta, .post-meta a {
	color: #ccc;
	color: rgba(0,0,0,.2);
}

.post-meta span a {
	-webkit-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
}
.post-meta span a:hover,
.post-meta span a:focus {
	color: #808080;
	color: rgba(0,0,0,.5);
}

